Fixes too low dropdown on ML markdown Fixes #687

--- a/assets/less/multilingual.less
+++ b/assets/less/multilingual.less
@@ -76,7 +76,7 @@
         }
 
         .ml-dropdown-menu {
-            top: 74px !important;
+            top: 74px;
             right: 12px;
         }
     }
